# padanan

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.serena/: project.yml
app/: analyze.py  db.py  main.py  transcribe.py
app/prompts/: analyze_system.txt  library.json
app/static/: app.css  recorder.js
app/templates/: base.html  history.html  index.html  recording.html  session_start.html  session_view.html
docs/: audio-pipeline.md  dogfooding.md  feedback-loop.md  local-llm-setup.md  plan.md  product-spec.md  risks.md
scripts/: analyze_test.py  whisper_test.py
